--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stocks</title>
-    <style type="text/css">
-        * {
-            box-sizing: border-box;
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <h1>Stock Market</h1>
+    <h2 id="Market-status"></h2>
+    <h3 id="Date"></h3>
+
     <button onclick="showcompanyform()">add company</button>
     <form name="addcompanyform" id="addcompanyform" style="display: none;">
         <input type="text" placeholder="company name" name="name"></input>
@@ -30,12 +26,14 @@
     <table>
         <thead>
             <tr>
+                <th>name</th>
                 <th>ticker</th>
                 <th>price</th>
                 <th>is us company</th>
                 <th>amount</th>
                 <th>value</th>
-                <th></th>
+                <th>buy more</th>
+                <th>remove stock</th>
             </tr>
         </thead>
         <tbody id="table-body">
