--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body id="body">
     <h1>Stock Market</h1>
     <h2 id="Market-status"></h2>
     <h3 id="Date"></h3>
